[package]
name = "cchipt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
egui = "0.17.0"
egui-winit = "0.17.0"
egui_wgpu_backend = "0.17.0"
pixels = "0.9.0"
rand = "0.8.5"
winit = "0.26.1"
winit_input_helper = "0.11.1"
